[gd_scene load_steps=35 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/ninja/run1.png" type="Texture" id=2]
[ext_resource path="res://sprites/ninja/run2.png" type="Texture" id=3]
[ext_resource path="res://sprites/ninja/run3.png" type="Texture" id=4]
[ext_resource path="res://sprites/ninja/run4.png" type="Texture" id=5]
[ext_resource path="res://sprites/ninja/run5.png" type="Texture" id=6]
[ext_resource path="res://sprites/ninja/run6.png" type="Texture" id=7]
[ext_resource path="res://sprites/ninja/idle1.png" type="Texture" id=8]
[ext_resource path="res://sprites/ninja/idle2.png" type="Texture" id=9]
[ext_resource path="res://sprites/ninja/idle3.png" type="Texture" id=10]
[ext_resource path="res://sprites/ninja/idle4.png" type="Texture" id=11]
[ext_resource path="res://sprites/ninja/jump1.png" type="Texture" id=12]
[ext_resource path="res://sprites/ninja/jump2.png" type="Texture" id=13]
[ext_resource path="res://sprites/ninja/jump3.png" type="Texture" id=14]
[ext_resource path="res://sprites/ninja/attack1.png" type="Texture" id=15]
[ext_resource path="res://sprites/ninja/attack2.png" type="Texture" id=16]
[ext_resource path="res://sprites/ninja/attack3.png" type="Texture" id=17]
[ext_resource path="res://sprites/ninja/attack4.png" type="Texture" id=18]
[ext_resource path="res://sprites/ninja/attack5.png" type="Texture" id=19]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack1-00-1.3.png" type="Texture" id=20]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack1-01-1.3.png" type="Texture" id=21]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack1-02-1.3.png" type="Texture" id=22]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack1-03-1.3.png" type="Texture" id=23]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack1-04-1.3.png" type="Texture" id=24]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack2-00-1.3.png" type="Texture" id=25]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack2-01-1.3.png" type="Texture" id=26]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack2-02-1.3.png" type="Texture" id=27]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack2-03-1.3.png" type="Texture" id=28]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack2-04-1.3.png" type="Texture" id=29]
[ext_resource path="res://sprites/ninja/hand_attacks/adventurer-attack2-05-1.3.png" type="Texture" id=30]
[ext_resource path="res://healthbar/HealthBar.tscn" type="PackedScene" id=31]
[ext_resource path="res://Player/GraplingHook/GraplingHook.tscn" type="PackedScene" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "Attack1",
"speed": 12.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "Attack2",
"speed": 16.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": false,
"name": "Attack3",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 14.0426 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.170517, 4.34813 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -0.296963, 19.8226 )

[node name="landingTimer" type="Timer" parent="."]
wait_time = 0.33
one_shot = true

[node name="SwordPosition" type="Position2D" parent="."]
position = Vector2( 11.1373, 5.36976 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Health" parent="." instance=ExtResource( 31 )]
position = Vector2( -13.1217, -15.9625 )
scale = Vector2( 0.15, 0.2 )

[node name="GraplingHook" parent="." instance=ExtResource( 32 )]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="landingTimer" to="." method="_on_landingTimer_timeout"]
